--- a/src/components/Productos/item/item.css
+++ b/src/components/Productos/item/item.css
@@ -23,3 +23,9 @@ p{
 .button{
 	padding: 30px;
 }
+.contItems{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
